# first-rtos

./: CMakeLists.txt  README.md
src/: main.c
